# inkayaku

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: main.rs
board/: Cargo.toml
board-perft/: Cargo.toml
board-perft/src/: main.rs
board/src/: board.rs  lib.rs
board/src/board/: constants.rs  precalculated.rs  zobrist.rs
board/src/board/precalculated/: magic.rs  nonmagic.rs
board/src/board/precalculated/magic/: generator.rs
board/tests/: perft.rs
board_perft/: Cargo.toml
core/: Cargo.toml
core/src/: fen.rs  lib.rs
core/src/constants/: color.rs  colored_piece.rs  direction.rs  file.rs  mod.rs  piece.rs  rank.rs  square.rs
engine-app/: Cargo.toml
engine-app/src/: main.rs
engine-core/src/engine/: heuristic.rs  search.rs
engine-core/src/engine/heuristic/: improved.rs
engine-lib/: Cargo.toml
engine-lib/src/: engine.rs  inkayaku.rs  lib.rs
engine-lib/src/engine/: heuristic.rs  move_order.rs  search.rs  table.rs  zobrist_history.rs
engine-lib/src/engine/heuristic/: improved.rs  simple.rs
engine-lib/src/engine/table/: transposition.rs
engine-lib/src/inkayaku/: heuristic.rs  metrics.rs  move_order.rs  search.rs  table.rs  transposition_table.rs  zobrist_history.rs
engine-lib/src/inkayaku/heuristic/: improved.rs  simple.rs
engine-lib/src/inkayaku/table/: killer.rs  transposition.rs
engine-piece-square-table-generator/: Cargo.toml
engine_app/: Cargo.toml
engine_app/src/: main.rs
engine_core/: Cargo.toml
engine_core/src/: engine.rs  lib.rs
engine_core/src/engine/: move_order.rs  table.rs  zobrist_history.rs
engine_core/src/engine/heuristic/: simple.rs
engine_core/src/engine/table/: killer.rs  transposition.rs
engine_piece_square_table_generator/: Cargo.toml
lichess-api/: Cargo.toml
lichess-api/src/: api.rs
lichess-api/src/api/: bot_event_response.rs  bot_game_state_response.rs
lichess-bot/: Cargo.toml
lichess-bot/src/: bot.rs  main.rs
lichess_api/: Cargo.toml
lichess_api/src/: lib.rs
lichess_api/src/api/: bot_event_response.rs  response.rs
lichess_bot/: Cargo.toml
lichess_bot/src/: bot.rs  main.rs
pgn/: Cargo.toml
pgn-test/: Cargo.toml
pgn-test/src/: main.rs
pgn/src/: lib.rs  reader.rs
pgn_test/: Cargo.toml
pgn_test/src/: main.rs
uci/: Cargo.toml
uci/src/: lib.rs  uci.rs
uci/src/uci/: command.rs  console.rs  message.rs  parser.rs
