[package]
name = "marvk-chess-engine-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
nohash-hasher = "0.2.0"
marvk-chess-board = { path = "../board" }
marvk-chess-core = { path = "../core" }
marvk-chess-uci = { path = "../uci" }
