[package]
name = "inkayaku_engine_app"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkayaku_engine_core = { path = "../engine_core" }
inkayaku_uci = { path = "../uci" }
