[package]
name = "marvk-chess-lichess-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marvk-chess-core = { path = "../core" }
surf = "2.3.2"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
futures-core = "0.3.28"
futures-util = "0.3.28"
serde_json = "1.0.103"
serde = "1.0.171"
async-stream = "0.3.5"
