[package]
name = "inkayaku_lichess_api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkayaku_core = { path = "../core" }
surf = "2.3.2"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
serde_json = "1.0.143"
serde = "1.0.219"
async-stream = "0.3.6"
