[package]
name = "inkayaku_lichess_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkayaku_lichess_api = { path = "../lichess_api" }
inkayaku_engine_core = { path = "../engine_core" }
inkayaku_core = { path = "../core" }
inkayaku_board = { path = "../board" }
inkayaku_uci = { path = "../uci" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
futures-core = "0.3.28"
futures-util = "0.3.28"
async-stream = "0.3.5"
surf = "2.3.2"
