[package]
name = "inkayaku_lichess_bot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkayaku_lichess_api = { path = "../lichess_api" }
inkayaku_engine_core = { path = "../engine_core" }
inkayaku_core = { path = "../core" }
inkayaku_board = { path = "../board" }
inkayaku_uci = { path = "../uci" }
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
async-stream = "0.3.6"
surf = "2.3.2"
