[package]
name = "inkayaku_pgn_test"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkayaku_core = { path = "../core" }
inkayaku_board = { path = "../board" }
inkayaku_pgn = { path = "../pgn" }
zstd = "0.13.3"
rand = "0.9.2"
